/**
 * Machine messages
 */

package anantak;

/** Kinematic state */
message KinematicStateMessage {
  repeated double state = 1;        // 20 vector of the state
  repeated double covariance = 3;   // 19x19 row major matrix of the error covariance
}

/** Pose3dState */
message Pose3dStateMessage {
  repeated double state = 1;        // 7 vector of the state
  repeated double covariance = 3;   // 6x6 row major matrix of the error covariance
}

/** Point1dStateMessage */
message Point1dStateMessage {
  required double state = 1;        // value
  required double covariance = 3;   // variance
}

/** PoseState */
message PoseStateMessage {
  repeated double state = 1;        // 7 vector of the state
  repeated double covariance = 3;   // 6x6 row major matrix of the error covariance
}

/** Position3dState */
message Vector3dStateMessage {
  repeated double state = 1;        // 3 vector of the state
  repeated double covariance = 3;   // 3x3 row major matrix of the error covariance  
}

/** Camera intrinsics */
message CameraIntrinsicsStateMessage {
  required int32 camera_num = 2;
  repeated double pinhole = 3;      // 4 vector of fx, fy, cx, cy
  repeated double radial = 4;       // 2 vector of radial distortion coefficients
  repeated double tangential = 5;   // 2 vector of tangential distortion coefficients
  repeated double covariance = 6;   // 4x4 / 6x6 / 8x8 Row major matrix of the error covariance
}

/** Pinhole intrinsics */
message PinholeIntrinsicsStateMessage {
  repeated int32  image_size = 2;   // 2 vector of image size in image width, height
  repeated double pinhole = 3;      // 4 vector of fx, fy, cx, cy
  repeated double radial = 4;       // 3 vector of radial distortion coefficients
  repeated double tangential = 5;   // 2 vector of tangential distortion coefficients
  repeated double covariance = 6;   // 9x9 Row major matrix of the error covariance
}

/** Pinhole intrinsics */
message CameraStateMessage {
  required int32 camera_num = 1;
  required PinholeIntrinsicsStateMessage  intrinsics = 2;
  required PoseStateMessage               extrinsics = 3;
  required Point1dStateMessage            time_delay = 4;
}

/** Apriltag */
message ApriltagStateMessage {
  required string tag_id = 1;
  required double size = 2;
  required double covariance = 3;   // covarince of the size
}

/** Static Apriltag message */
message StaticApriltagStateMessage {
  required ApriltagStateMessage tag = 1;
  required PoseStateMessage pose = 2;
}

/** LEDs message */
message LedMessage {
  required Vector3dStateMessage position = 1;
  required double diameter = 2;
}

/* IMU message */
message ImuMessage {
  required PoseStateMessage pose = 1;
  // accelerometer biases
  // gyroscope biases
  // gravity (?)
  // variances of biases and measurements
}

